[project]
name = "specio"
dynamic = ["version"]
description = "Imaging Spectrometer Utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["spectral", "specio"]
authors = [
  {name = "Philip G. Brodrick", email = "philip.brodrick@jpl.nasa.gov"},
]
maintainers = [
  {name = "Philip G. Brodrick", email = "philip.brodrick@jpl.nasa.gov"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click",
  "gdal",
  "netCDF4",
  "numpy",
  "pyproj",
  "spectral",
  "scipy",
  "tqdm",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
repository = "http://github.com/emit-sds/SpectralUtil"

[project.scripts]
specio = "specio.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "specio/__init__.py"
